--- a/src/app/components/employees/edit-employee/edit-employee.component.html
+++ b/src/app/components/employees/edit-employee/edit-employee.component.html
@@ -1,3 +1,4 @@
+
 <div class="container my-5">
     <h1 class="mb-3">Edit employee</h1>
     <div class="row">
@@ -14,20 +15,17 @@
                     <input type="text" class="form-control" id="lastName" 
                     name="lastName" [(ngModel)]="employeeToEdit.lastName">
                   </div>
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Day of birth</label>
-                    <input type="number" class="form-control" id="dob" 
-                    name="dob" [(ngModel)]="employeeToEdit.dob.day">
-                  </div>
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Month of birth</label>
-                    <input type="number" class="form-control" id="dob" 
-                    name="dob" [(ngModel)]="employeeToEdit.dob.month">
-                  </div>
-                  <div class="mb-3">
-                    <label for="name" class="form-label">Year of birth</label>
-                    <input type="number" class="form-control" id="dob" 
-                    name="dob" [(ngModel)]="employeeToEdit.dob.year">
+                  <label for="DOB" class="form-label">Date of birth</label>
+                <div class="row">
+                  <div class="col-md-3 col-md-offset-6">
+                    <label class="control-label" for="day">Day</label>
+                    <input class="form-control" id="day" name="day" type="number" [(ngModel)]="employeeToEdit.dob.day"></div>
+                  <div class="col-md-3 col-md-offset-6">
+                   <label class="control-label" for="month">Month</label>
+                   <input class="form-control" id="month" name="month" type="number" [(ngModel)]="employeeToEdit.dob.month"></div>
+                  <div class="col-md-3 col-md-offset-6">
+                   <label class="control-label" for="year">Year</label>
+                   <input class="form-control" id="year" name="year" type="number"  [(ngModel)]="employeeToEdit.dob.year" ></div>   
                   </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email address</label>
@@ -59,9 +57,18 @@
                     <input type="number" class="form-control" id="salary" 
                     name="salary" [(ngModel)]="employeeToEdit.salary">
                   </div>
-                  <div class="mb-3">
-                    <label for="department" class="form-label">Department</label>
-                    <input type="text" class="form-control" id="department" 
+                  <button *ngIf="!inputSwitch" (click)="toggle()">Existing Department</button>
+                  <button *ngIf="inputSwitch" (click)="toggle()">New Department</button>
+                  <div class="mb-3" *ngIf="inputSwitch">
+                    <label for="department" class="form-label">Choose Department</label>
+                    <select class="form-control"  id="department"
+                            [(ngModel)]="employeeToEdit.department" name="department">
+                      <option *ngFor="let dep of departments" [value]="dep.name">{{dep.name}}</option>
+                    </select>
+                  </div>
+                  <div class="mb-3"  *ngIf="!inputSwitch">
+                    <label for="department" class="form-label">New Department</label>
+                    <input type="text" class="form-control" id="department" placeholder="Enter new department"
                     name="department" [(ngModel)]="employeeToEdit.department">
                   </div>
                 <button type="submit" class="btn btn-primary">Save</button>
