--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -14,21 +14,18 @@
                 <input type="text" class="form-control" id="name" 
                 name="name" [(ngModel)]="newEmployee.lastName">
               </div>
-              <div class="mb-3">
-                <label for="name" class="form-label">Day of birth</label>
-                <input type="number" class="form-control" id="dob" 
-                name="dob" [(ngModel)]="newEmployee.dob.day">
-              </div>
-              <div class="mb-3">
-                <label for="name" class="form-label">Month of birth</label>
-                <input type="number" class="form-control" id="dob" 
-                name="dob" [(ngModel)]="newEmployee.dob.month">
-              </div>
-              <div class="mb-3">
-                <label for="name" class="form-label">Year of birth</label>
-                <input type="number" class="form-control" id="dob" 
-                name="dob" [(ngModel)]="newEmployee.dob.year">
-              </div>
+              <label for="DOB" class="form-label">Date of birth</label>
+              <div class="row">
+                <div class="col-md-3 col-md-offset-6">
+                  <label class="control-label" for="day">Day</label>
+                  <input class="form-control" id="day" name="day" type="number" [(ngModel)]="newEmployee.dob.day"></div>
+                <div class="col-md-3 col-md-offset-6">
+                 <label class="control-label" for="month">Month</label>
+                 <input class="form-control" id="month" name="month" type="number" [(ngModel)]="newEmployee.dob.month"></div>
+                <div class="col-md-3 col-md-offset-6">
+                 <label class="control-label" for="year">Year</label>
+                 <input class="form-control" id="year" name="year" type="number"  [(ngModel)]="newEmployee.dob.year" ></div>   
+                </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email address</label>
                   <input type="email" class="form-control" id="email"  placeholder="Enter email"
@@ -59,15 +56,22 @@
                     <input type="number" class="form-control" id="salary" placeholder="Enter salary"
                     name="salary" [(ngModel)]="newEmployee.salary">
                   </div>
-                  <div class="mb-3">
-                    <label for="department" class="form-label">Department</label>
-                    <input type="text" class="form-control" id="department" placeholder="Enter department"
+                  <button *ngIf="!inputSwitch" (click)="toggle()">Existing Department</button>
+                  <button *ngIf="inputSwitch" (click)="toggle()">New Department</button>
+                  <div class="mb-3" *ngIf="inputSwitch">
+                    <label for="department" class="form-label">Choose Department</label>
+                    <select class="form-control"  id="department"
+                            [(ngModel)]="newEmployee.department" name="department">
+                      <option *ngFor="let dep of departments" [value]="dep.name">{{dep.name}}</option>
+                    </select>
+                  </div>
+                  <div class="mb-3"  *ngIf="!inputSwitch">
+                    <label for="department" class="form-label">New Department</label>
+                    <input type="text" class="form-control" id="department" placeholder="Enter new department"
                     name="department" [(ngModel)]="newEmployee.department">
                   </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
-
         </div>
     </div>
-    
 </div>
